# SimpleWelcome

./: .abf.yml  .gitignore  CMakeLists.txt  PreLoad.cmake  README  config.h.in  create_rpm.sh  rosa-launcher.spec
facebook-timeframe-plugin/: CMakeLists.txt  facebook-timeframe-plugin.pro  facebookmodule.cpp  facebookmodule.h  feeditem.cpp  feeditem.h  oauth2authorizer.cpp  oauth2authorizer.h  plugin.cpp  plugin.h  request.cpp  request.h  requestmanager.cpp  requestmanager.h  resources.qrc
facebook-timeframe-plugin/qml/: FacebookAuthWeb.qml  FacebookStatusUpdatesView.qml  ServiceHeader.qml  main.qml
po/: CMakeLists.txt  ROSA_Launcher.pot  extract-messages.sh
po/ar/: ROSA_Launcher.po
po/de/: ROSA_Launcher.po
po/es/: ROSA_Launcher.po
po/et/: ROSA_Launcher.po
po/eu/: ROSA_Launcher.po
po/fr/: ROSA_Launcher.po
po/pt_BR/: ROSA_Launcher.po
po/ru/: ROSA_Launcher.po
po/sl/: ROSA_Launcher.po
po/sw/: CMakeLists.txt  ROSA_Launcher.po
po/tr/: ROSA_Launcher.po
po/zh_TW/: ROSA_Launcher.po
refs/heads/: develop
rosa-service-runner/: CMakeLists.txt  plasma-runner-rosa-services2.desktop  rosa_servicerunner.cpp
rosa-starter/: CMakeLists.txt  plasma-applet-rosastarter.desktop
rosa-starter/src/: config.h  rosa-starter.cpp  rosa-starter.h
src/: CMakeLists.txt  appentity.cpp  appentity.h  appiconprovider.cpp  appiconprovider.h  appitem.h  appprovider.cpp  appprovider.h  appsgridmodel.cpp  appsgridmodel.h  datasource.cpp  datasource.h  datasource_apps.cpp  datasource_apps.h  datasource_documents.cpp  datasource_documents.h  datasource_favorites.cpp  datasource_favorites.h  datasource_recentapps.cpp  datasource_recentapps.h  datasource_search.cpp  datasource_search.h  documentsgridmodel.cpp  documentsgridmodel.h  documentsprovider.cpp  documentsprovider.h  favoritesgridmodel.cpp  favoritesgridmodel.h  generaliconprovider.cpp  generaliconprovider.cpp.autosave  generaliconprovider.h  generaliconprovider.h.autosave  main.cpp  placesprovider.cpp  placesprovider.h  recentappsgridmodel.cpp  recentappsgridmodel.h  recentappsprovider.cpp  recentappsprovider.h  searchgridmodel.cpp  (+13 more)
src/qml/: AppButton.qml  AppGrid.qml  ApplicationsTab.qml  AppsGridModel.qml  AppsGridView.qml  BottomBar.qml  Button.qml  Cell.qml  DropBox.qml  FirstTab.qml  FirstTab_old.qml  GridGroup.qml  GridRow.qml  GridWithGroup.qml  GridWithGroupContainer.qml  GridWithGroupTab.qml  GridWithGroupTabListView.qml  GridWithGroupTabMouse.qml  GroupGrid.qml  GroupText.qml  IconGridView.qml  PopupFrame.qml  ScreenGrid.qml  ScreenGridRow.qml  ScreenView.qml  ScrollBar.qml  SearchTab.qml  SecondTab.js  SecondTab.qml  SessionButton.qml  SessionComboBox.qml  TabButton.qml  TestingTab.qml  Tooltip.qml  TopBar.qml  WelcomeTab.qml  main.qml  qmldir
src/qml/timeframe/: ActivityItem.qml  Button.qml  ButtonText.qml  CloudDelegate.qml  CloudFive.qml  CloudFour.qml  CloudNull.qml  CloudOne.qml  CloudRect.qml  CloudSeven.qml  CloudSix.qml  CloudThree.qml  CloudTwo.qml  CommentsEditBox.qml  CommentsListView.qml  DropFilterBox.qml  DropListBox.qml  FromItem.qml  GalleryDayDelegate.qml  GalleryDelegate.qml  ItemRectangle.qml  Label.qml  Preview.qml  SceneDelegate.qml  ScrollBar.qml  ShadowRectangle.qml  SocialAuthorization.qml  SocialBottomBar.qml  SocialCloudDelegate.qml  SocialCloudFour.qml  SocialCloudItem.qml  SocialCloudItemDelegate.qml  SocialCloudOne.qml  SocialCloudThree.qml  SocialCloudTwo.qml  SocialDelegate.qml  SocialGalleryDelegate.qml  SocialGalleryItem.qml  SocialImage.qml  SocialMessageView.qml  (+9 more)
src/qml/timeframe/clouds/: CloudFive.qml  CloudFour.qml  CloudNull.qml  CloudOne.qml  CloudRect.qml  CloudSeven.qml  CloudSix.qml  CloudThree.qml  CloudTwo.qml  SocialCloudFour.qml  SocialCloudOne.qml  SocialCloudThree.qml  SocialCloudTwo.qml
src/qmlapplicationviewer/: qmlapplicationviewer.cpp  qmlapplicationviewer.h
src/shadowblur/: shadowblur.cpp  shadowblur.h
src/timeframe/: activitylist.cpp  activitylist.h  activitymodel.cpp  activitymodel.h  activityproxy.cpp  activityproxy.h  activityset.cpp  activityset.h  activitysource.cpp  activitysource.h  galleryitem.cpp  galleryitem.h  gallerylister.cpp  gallerylister.h  gallerymodel.cpp  gallerymodel.h  itemmodel.cpp  itemmodel.h  klookprocess.cpp  klookprocess.h  listitem.h  listmodel.cpp  listmodel.h  localdayitem.cpp  localdayitem.h  localdaymodel.cpp  localdaymodel.h  nepomuksource.cpp  nepomuksource.h  previewgenerator.cpp  previewgenerator.h  previewprovider.cpp  previewprovider.h  resources.qrc  timescalemodel.cpp  timescalemodel.h
src/timeframe/local/: activity.cpp  activity.h  activityproxy.cpp  activityproxy.h  activityset.cpp  activityset.h  activitysource.cpp  activitysource.h  itemmodel.cpp  itemmodel.h  localcontentitem.cpp  localcontentitem.h  localcontentmodel.cpp  localcontentmodel.h  localdayitem.cpp  localdayitem.h  localdaymodel.cpp  localdaymodel.h  nepomuksource.cpp  nepomuksource.h  previewgenerator.cpp  previewgenerator.h  previewprovider.cpp  previewprovider.h  video.cpp  video.h
src/timeframe/social/: PluginImageProvider.h  pluginimageprovider.h  pluginitem.cpp  pluginitem.h  pluginloader.cpp  pluginloader.h  pluginmodel.cpp  pluginmodel.h  pluginreply.cpp  pluginreply.h  pluginrequestreply.cpp  pluginrequestreply.h  socialcontentmodel.cpp  socialcontentmodel.h  socialdayitem.cpp  socialdayitem.h  socialdaymodel.cpp  socialdaymodel.h  socialitem.h  socialitemmodel.cpp  socialitemmodel.h  socialmodel.cpp  socialmodel.h  socialplugin.h  socialpluginmanager.cpp  socialpluginmanager.h  socialproxy.cpp  socialproxy.h
timeframelib/: CMakeLists.txt  commentitem.cpp  commentitem.h  listitem.h  listmodel.cpp  listmodel.h  requestqueue.cpp  requestqueue.h  socialitem.cpp  socialitem.h  socialplugin.h  timeframelib_global.h
vkontakte-timeframe-plugin/: CMakeLists.txt  feeditem.cpp  feeditem.h  oauth2authorizer.cpp  oauth2authorizer.h  request.cpp  request.h  requestmanager.cpp  requestmanager.h  resources.qrc  vkontaktemodule.cpp  vkontaktemodule.h
